# Ring-Minus-One-For-Redteamer

./: Cargo.toml  README.md
assets/capcom/: capcom.sys
hvcore/src/: host.rs  os_api.rs  run_guest.S  serial_logger.rs
hvcore/src/drivers/: uart.rs
hvcore/src/x86_64/: control_registers.rs  msr.rs
minivisor/src/: eprintln.rs  lib.rs
src/: Cargo.toml  deny.toml
src/.cargo/: config.toml
src/hvcore/: Cargo.toml
src/hvcore/src/: host.rs  lib.rs  misc.rs  registers.S  registers.rs
src/hvcore/src/x86_64/: misc.rs  mod.rs  segment.rs  vmx.rs
src/minivisor/: Cargo.toml  Makefile.toml  build.rs
